feat: update a comment
