# src/routes/comments/index.ts
@@ -5,5 +5,6 @@ import { CommentController } from '@/controllers/http'
 const commentsRoute = Router()
 
 commentsRoute.post('/comments', auth, CommentController.store)
+commentsRoute.patch('/comments/:id', auth, CommentController.update)
 
 export default commentsRoute
